Add skeleton fields

--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -30,26 +30,22 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="/">Entry</a></li>
+          <li><a href="/">Entry</a></li>
           <li><a href="/Mood.html">Mood</a></li>
-          <li><a href="/LoveBank.html">LoveBank</a></li>
+          <li class="active"><a href="/LoveBank.html">LoveBank</a></li>
         </ul>
         <h3 class="text-muted">LoveBank Web</h3>
       </div>
       <div class="row marketing">
         <div class="col-lg-6">
-          <h2>Entry</h2>
+          <h2>LoveBank</h2>
           <form action="index_submit" method="get" accept-charset="utf-8">
             <input type="radio" name="rating" value="one">1<br>
             <input type="radio" name="rating" value="two">2<br>
             <input type="radio" name="rating" value="three">3<br>
             <input type="radio" name="rating" value="four">4<br>
             <input type="radio" name="rating" value="five">5<br>
-            <p>Description</p>
-            <input type="text" name="description"><br>
-            <input type="checkbox" name="received" value="Received?"><br>
-            <p>Date and time</p>
-            <input type="datetime" name="Occurred At"><br>
+            <input type="text" name="description">
             <p><input type="submit" value="Continue →"></p>
           </form>
 
