--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -11,6 +11,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -33,22 +34,23 @@
           <li><a href="/">Entry</a></li>
           <li><a href="/Mood.html">Mood</a></li>
           <li class="active"><a href="/LoveBank.html">LoveBank</a></li>
+          <li><a href="/Profile.html">Profile</a></li>
         </ul>
-        <h3 class="text-muted">LoveBank Web</h3>
+        <h3 class="text-muted" id="profile-name">Profile</h3>
       </div>
       <div class="row marketing">
         <div class="col-lg-6">
           <h2>LoveBank</h2>
-          <form action="index_submit" method="get" accept-charset="utf-8">
-            <input type="radio" name="rating" value="one">1<br>
-            <input type="radio" name="rating" value="two">2<br>
-            <input type="radio" name="rating" value="three">3<br>
-            <input type="radio" name="rating" value="four">4<br>
-            <input type="radio" name="rating" value="five">5<br>
+          <form id="love-bank" action="http://localhost:3000/love-bank" method="post" accept-charset="utf-8">
+            <input type="radio" name="rating" value="1">one<br>
+            <input type="radio" name="rating" value="2">Two<br>
+            <input type="radio" name="rating" value="3">Three<br>
+            <input type="radio" name="rating" value="4">Four<br>
+            <input type="radio" name="rating" value="5">Five<br>
             <input type="text" name="description">
-            <p><input type="submit" value="Continue →"></p>
+            <p><input type="submit" value="Save"></p>
           </form>
-
+          <div id="message"></div>
         </div>
       </div>
 
@@ -70,6 +72,9 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/moment/moment.js"></script>
+    <script src="/bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
+    <script src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
