--- a/app/Profile.html
+++ b/app/Profile.html
@@ -11,6 +11,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -18,6 +19,9 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
+    <!-- build:js scripts/vendor/modernizr.js -->
+    <script src="/bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -27,42 +31,40 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="/">Entry</a></li>
+          <li><a href="/">Entry</a></li>
           <li><a href="/Mood.html">Mood</a></li>
           <li><a href="/LoveBank.html">LoveBank</a></li>
-          <li><a href="/Profile.html">Profile</a></li>
+          <li class="active"><a href="/Profile.html">Profile</a></li>
         </ul>
-        <h3 class="text-muted" id="profile-name">LoveBank Web</h3>
+        <h3 class="text-muted" id="profile-name">Profile</h3>
       </div>
       <div class="row marketing">
         <div class="col-lg-6">
-          <h2>Entry</h2>
-          <form id="entry" action="http://localhost:3000/entries" method="post" accept-charset="utf-8">
-            <input type="radio" name="rating" value="1" required>One<br>
-            <input type="radio" name="rating" value="2">Two<br>
-            <input type="radio" name="rating" value="3">Three<br>
-            <input type="radio" name="rating" value="4">Four<br>
-            <input type="radio" name="rating" value="5">Five<br>
-            <label>Description
-              <input type="text" name="description"><br>
+          <h2>Profile Details</h2>
+          <form id="profile" action="http://localhost:3000/profiles" method="post" accept-charset="utf-8">
+            <label for="firstname">First Name
+              <input type="text" name="firstname">
             </label>
-            <label><input type="checkbox" name="received">Received Action</label>
-
-            <div class="control-group">
-              <label for="date-picker-2" class="control-label">Occurred On</label>
-              <div class="controls">
-                <div class="input-group">
-                  <input id="date-picker-2" type="text" class="date-picker form-control" />
-                  <label for="date-picker-2" class="input-group-addon btn"><span class="glyphicon glyphicon-calendar"></span>
-                  </label>
-                </div>
-              </div>
-            </div>
-
-            <label><input type="checkbox" name="keep_private">Keep Private</label>
+            <label for="lastname">Last Name
+              <input type="text" name="lastname">
+            </label>
+            <label for="email">Email
+              <input type="text" name="email">
+            </label>
             <p><input type="submit" value="Save"></p>
           </form>
-          <div id="message" class="alert alert-success" role="alert"></div>
+
+          <h3>Your partners email address</h3>
+          <p>This is used to link actions received by partners.</p>
+          <div id="linked_FirstName"></div>
+          <form id="linked-profile-form" action="http://localhost:3000/profiles?filter[email]=" method="get" accept-charset="utf-8">
+            <label for="email">Email
+              <input type="text" name="email">
+            </label>
+            <p><input type="submit" value="Lookup"></p>
+          </form>
+
+          <div id="message"></div>
         </div>
       </div>
 
@@ -86,12 +88,8 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
+    <script src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <!-- endbower -->
-    <!-- endbuild -->
-
-
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/plugins.js -->
@@ -112,21 +110,5 @@
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
-
-    <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
-    <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.js"></script>-->
-    <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-    <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
-
-    <script type="text/javascript">
-      // Date picker for Entry form.
-      $(function() {
-        $('.date-picker').datetimepicker().on('dp.change', function (e) {
-            $('date-picker-2').val(e.date.toString());
-          }
-        );
-      });
-    </script>
-
   </body>
 </html>
