Squashed commit of the following:
commit 7a8f1c11d41133f4665e5c02459793192e8804d3
Author: Jared L Jennings <jared@jaredjennings.org>
Date:   Sat Feb 6 11:18:24 2016 -0600

    Updated ignore file and profile layout changes

commit dc3b70d784028866b3aaa483267f04415490e4cf
Author: Jared L Jennings <jared@jaredjennings.org>
Date:   Sat Feb 6 00:00:28 2016 -0600

    Fieldset changes for profile

--- a/app/Profile.html
+++ b/app/Profile.html
@@ -41,33 +41,38 @@
       <div class="row marketing">
         <div class="col-lg-6">
           <h2>Profile Details</h2>
+
           <form id="profile" action="http://localhost:3000/profiles" method="post" accept-charset="utf-8">
-            <label for="firstname">First Name
-              <input type="text" name="firstname">
-            </label>
-            <label for="lastname">Last Name
-              <input type="text" name="lastname">
-            </label>
-            <label for="email">Email
-              <input type="text" name="email">
-            </label>
-            <p><input type="submit" value="Save"></p>
+            <fieldset class="form-group">
+              <label for="firstname">First Name</label>
+              <input class="form-control" type="text" name="firstname">
+            </fieldset>
+            <fieldset class="form-group">
+              <label for="lastname">Last Name</label>
+              <input class="form-control" type="text" name="lastname">
+            </fieldset>
+            <fieldset class="form-group">
+            <label for="email">Email</label>
+              <input class="form-control" type="text" name="email">
+            </fieldset>
+            <input class="btn btn-default"type="submit" value="Save">
           </form>
 
           <h3>Your partners email address</h3>
           <p>This is used to link actions received by partners.</p>
           <div id="linked_FirstName"></div>
+
           <form id="linked-profile-form" action="http://localhost:3000/profiles?filter[email]=" method="get" accept-charset="utf-8">
-            <label for="email">Email
-              <input type="text" name="email">
-            </label>
-            <p><input type="submit" value="Lookup"></p>
+            <fieldset class="form-group">
+            <label for="email">Email</label>
+              <input class="form-control" type="text" name="email">
+            </fieldset>
+            <input class="btn btn-default" type="submit" value="Lookup">
           </form>
 
           <div id="message"></div>
         </div>
       </div>
-
       <div class="footer">
         <p>♥ from the LoveBank team</p>
       </div>
