--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -39,21 +39,26 @@
         <h3 class="text-muted" id="profile-name">Profile</h3>
       </div>
       <div class="row marketing">
-        <div class="col-lg-6">
-          <h2>LoveBank</h2>
-          <form id="love-bank" action="http://localhost:3000/love-bank" method="post" accept-charset="utf-8">
-            <input type="radio" name="rating" value="1">one<br>
-            <input type="radio" name="rating" value="2">Two<br>
-            <input type="radio" name="rating" value="3">Three<br>
-            <input type="radio" name="rating" value="4">Four<br>
-            <input type="radio" name="rating" value="5">Five<br>
-            <input type="text" name="description">
-            <p><input type="submit" value="Save"></p>
-          </form>
-          <div id="message"></div>
+        <h2>Love Bank</h2>
+        <form id="love-bank" action="http://localhost:3000/love-bank" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
+          <div class="form-group">
+            <label class="col-sm-4 control-label">Love Rating</label>
+            <div class="col-sm-8">
+              <label class="radio-inline"><input type="radio" name="rating" value="1">One</label>
+              <label class="radio-inline"><input type="radio" name="rating" value="2">Two</label>
+              <label class="radio-inline"><input type="radio" name="rating" value="3">Three</label>
+              <label class="radio-inline"><input type="radio" name="rating" value="4">Four</label>
+              <label class="radio-inline"><input type="radio" name="rating" value="5">Five</label>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="exampleTextarea">Notes about how your mood</label>
+          <textarea class="form-control" type="text" name="description" rows="3"></textarea>
         </div>
+          <input class="btn btn-default" type="submit" value="Save">
+        </form>
+          <div id="message"></div>
       </div>
-
       <div class="footer">
         <p>♥ from the LoveBank team</p>
       </div>
