--- a/app/index.html
+++ b/app/index.html
@@ -35,23 +35,46 @@
         <h3 class="text-muted" id="profile-name">LoveBank Web</h3>
       </div>
       <div class="row marketing">
-        <div class="col-lg-6">
+
           <h2>Entry</h2>
-          <form id="entry" action="http://localhost:3000/entries" method="post" accept-charset="utf-8">
-            <input type="radio" name="rating" value="1" required>One<br>
-            <input type="radio" name="rating" value="2">Two<br>
-            <input type="radio" name="rating" value="3">Three<br>
-            <input type="radio" name="rating" value="4">Four<br>
-            <input type="radio" name="rating" value="5">Five<br>
-            <label>Description
-              <input type="text" name="description"><br>
-            </label>
-            <label><input type="checkbox" name="received">Received Action</label>
+          <form id="entry" action="http://localhost:3000/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
+
+            <div class="form-group">
+              <label class="col-sm-4 control-label">Mood Rating</label>
+              <div class="col-sm-8">
+                <label class="radio-inline"><input type="radio" name="rating" value="1" required>One</label>
+                <label class="radio-inline"><input type="radio" name="rating" value="2">Two</label>
+                <label class="radio-inline"><input type="radio" name="rating" value="3">Three</label>
+                <label class="radio-inline"><input type="radio" name="rating" value="4">Four</label>
+                <label class="radio-inline"><input type="radio" name="rating" value="5">Five</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-sm-4 control-label" for="exampleTextarea">Notes about how you feel</label>
+              <div class="col-sm-8">
+                <textarea class="form-control" type="text" name="description" rows="3"></textarea>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-sm-4 control-label">Action received:</label>
+              <div class="col-sm-8">
+                <label class="radio-inline"><input type="checkbox" name="received">Received Action</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-sm-4 control-label">Share with your partner:</label>
+              <div class="col-sm-8">
+                <label class="radio-inline"><input type="checkbox" name="keep_private">Keep Private</label>
+              </div>
+            </div>
 
             <div class="control-group">
               <label for="date-picker-2" class="control-label">Occurred On</label>
               <div class="controls">
-                <div class="input-group">
+                <div class="input-group col-xs-6">
                   <input id="date-picker-2" type="text" class="date-picker form-control" />
                   <label for="date-picker-2" class="input-group-addon btn"><span class="glyphicon glyphicon-calendar"></span>
                   </label>
@@ -59,11 +82,16 @@
               </div>
             </div>
 
-            <label><input type="checkbox" name="keep_private">Keep Private</label>
-            <p><input type="submit" value="Save"></p>
+            <p>Try to specify as exact as possible when the action occured. This helps us analyze the data and
+            determine meaningful actions.</p>
+
+            <div class="form-group col-sm-12">
+              <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+
           </form>
-          <div id="message" class="alert alert-success" role="alert"></div>
-        </div>
+          <div id="message" class="alert alert-success col-sm-12" role="alert"></div>
+
       </div>
 
       <div class="footer">
