Updated form action URL

--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -40,7 +40,7 @@
       </div>
       <div class="row marketing">
         <h2>Love Bank</h2>
-        <form id="love-bank" action="http://localhost:3000/love-bank" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
+        <form id="love-bank" action="/love-bank" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
           <div class="form-group">
             <label class="col-sm-4 control-label">Love Rating</label>
             <div class="col-sm-8">
