--- a/app/Mood.html
+++ b/app/Mood.html
@@ -40,7 +40,7 @@
       </div>
       <div class="row marketing">
         <h2>Mood</h2>
-        <form id="mood" action="http://localhost:3000/moods" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
+        <form id="mood" action="/moods" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
 
           <div class="form-group">
             <label class="col-sm-4 control-label">Mood Rating</label>
