--- a/app/Profile.html
+++ b/app/Profile.html
@@ -42,7 +42,7 @@
         <div class="col-lg-6">
           <h2>Profile Details</h2>
 
-          <form id="profile" action="http://localhost:3000/profiles" method="post" accept-charset="utf-8">
+          <form id="profile" action="/profiles" method="post" accept-charset="utf-8">
             <fieldset class="form-group">
               <label for="firstname">First Name</label>
               <input class="form-control" type="text" name="firstname">
