--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
       <div class="row marketing">
 
           <h2>Entry</h2>
-          <form id="entry" action="http://localhost:3000/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
+          <form id="entry" action="/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
 
             <div class="form-group">
               <label class="col-sm-4 control-label">Mood Rating</label>
