--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -57,7 +57,7 @@
         </div>
           <input class="btn btn-default" type="submit" value="Save">
         </form>
-          <div id="message"></div>
+        <div id="message" class="alert alert-success col-sm-12" role="alert"></div>
       </div>
       <div class="footer">
         <p>♥ from the LoveBank team</p>
