Linked profile action pointed to local host

--- a/app/Profile.html
+++ b/app/Profile.html
@@ -62,7 +62,7 @@
           <p>This is used to link actions received by partners.</p>
           <div id="linked_FirstName"></div>
 
-          <form id="linked-profile-form" action="http://localhost:3000/profiles?filter[email]=" method="get" accept-charset="utf-8">
+          <form id="linked-profile-form" action="/profiles?filter[email]=" method="get" accept-charset="utf-8">
             <fieldset class="form-group">
             <label for="email">Email</label>
               <input class="form-control" type="text" name="email">
