--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
           <form id="entry" action="/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
 
             <div class="form-group">
-              <label class="col-sm-4 control-label">Mood Rating</label>
+              <label class="col-sm-4 control-label">Appreciation</label>
               <div class="col-sm-8">
                 <label class="radio-inline"><input type="radio" name="rating" value="1" required>One</label>
                 <label class="radio-inline"><input type="radio" name="rating" value="2">Two</label>
