--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -52,7 +52,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="exampleTextarea">Notes about how your mood</label>
+            <label for="exampleTextarea">Thoughts</label>
           <textarea class="form-control" type="text" name="description" rows="3"></textarea>
         </div>
           <input class="btn btn-default" type="submit" value="Save">
