Minor changes to inputs and labels

--- a/app/Profile.html
+++ b/app/Profile.html
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a href="/">Entry</a></li>
+          <li><a href="/">Deposit</a></li>
           <li><a href="/Mood.html">Mood</a></li>
           <li><a href="/LoveBank.html">LoveBank</a></li>
           <li class="active"><a href="/Profile.html">Profile</a></li>
