--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -29,15 +29,30 @@
     <![endif]-->
 
     <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="/">Deposit</a></li>
-          <li><a href="/Mood.html">Mood</a></li>
-          <li class="active"><a href="/LoveBank.html">LoveBank</a></li>
-          <li><a href="/Profile.html">Profile</a></li>
-        </ul>
-        <h3 class="text-muted" id="profile-name">Profile</h3>
-      </div>
+
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Love Treasury</a>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+              <li><a href="/">Deposit</a></li>
+              <li><a href="/Mood.html">Mood</a></li>
+              <li class="active"><a href="/LoveBank.html">LoveBank</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a id="profile-name" href="/Profile.html"></a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
       <div class="row marketing">
         <h2>Love Bank</h2>
         <form id="love-bank" action="/love-bank" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
@@ -55,7 +70,9 @@
             <label for="exampleTextarea">Thoughts</label>
           <textarea class="form-control" type="text" name="description" rows="3"></textarea>
         </div>
-          <input class="btn btn-default" type="submit" value="Save">
+        <div class="form-group col-sm-12">
+          <button type="submit" class="btn btn-primary">Save</button>
+        </div>
         </form>
         <div id="message" class="alert alert-success col-sm-12" role="alert"></div>
       </div>
