--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -22,6 +22,9 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+
+    <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
+
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -56,16 +59,14 @@
       <div class="row marketing">
         <h2>Love Bank</h2>
         <form id="love-bank" action="/love-bank" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
+
           <div class="form-group">
-            <label class="col-sm-4 control-label">Love Rating</label>
+            <label class="col-sm-4 control-label">Impact level:</label>
             <div class="col-sm-8">
-              <label class="radio-inline"><input type="radio" name="rating" value="1">One</label>
-              <label class="radio-inline"><input type="radio" name="rating" value="2">Two</label>
-              <label class="radio-inline"><input type="radio" name="rating" value="3">Three</label>
-              <label class="radio-inline"><input type="radio" name="rating" value="4">Four</label>
-              <label class="radio-inline"><input type="radio" name="rating" value="5">Five</label>
+              <input id="rating" type="number" class="rating" min=0 max=5 step=1 required>
             </div>
           </div>
+
           <div class="form-group">
             <label for="exampleTextarea">Thoughts</label>
           <textarea class="form-control" type="text" name="description" rows="3"></textarea>
@@ -114,6 +115,8 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
+
+    <script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js" type="text/javascript"></script>
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
