--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
+    <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
+
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -57,11 +59,7 @@
             <div class="form-group">
               <label class="col-sm-4 control-label">Impact level:</label>
               <div class="col-sm-8">
-                <label class="radio-inline"><input type="radio" name="rating" value="1" required>One</label>
-                <label class="radio-inline"><input type="radio" name="rating" value="2">Two</label>
-                <label class="radio-inline"><input type="radio" name="rating" value="3">Three</label>
-                <label class="radio-inline"><input type="radio" name="rating" value="4">Four</label>
-                <label class="radio-inline"><input type="radio" name="rating" value="5">Five</label>
+                <input id="rating" type="number" class="rating" min=0 max=5 step=1 required>
               </div>
             </div>
 
@@ -159,6 +157,8 @@
     <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.js"></script>-->
     <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+
+    <script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js" type="text/javascript"></script>
 
     <script type="text/javascript">
       // Date picker for Entry form.
