--- a/app/Mood.html
+++ b/app/Mood.html
@@ -56,19 +56,20 @@
       </nav>
 
       <div class="row marketing">
-        <h2>Mood</h2>
+        <h2>Current Mood</h2>
         <form id="mood" action="/moods" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
 
           <div class="form-group">
-            <label class="col-sm-4 control-label">Impact level:</label>
-            <div class="col-sm-8">
+            <div class="col-sm-12 ">
               <input id="rating" type="number" class="rating" min=0 max=5 step=1 required>
             </div>
           </div>
 
           <div class="form-group">
-            <label for="exampleTextarea">Notes about how you feel</label>
-            <textarea class="form-control" type="text" name="description" rows="3"></textarea>
+            <div class="col-sm-12 ">
+              <label for="exampleTextarea">Notes about how you feel</label>
+              <textarea class="form-control" type="text" name="description" rows="3"></textarea>
+            </div>
           </div>
 
           <div class="form-group col-sm-12">
