--- a/app/index.html
+++ b/app/index.html
@@ -57,9 +57,10 @@
           <form id="entry" action="/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
 
             <div class="form-group">
-              <label class="col-sm-4 control-label">Impact level:</label>
+              <label class="col-sm-4 control-label">Action received or given:</label>
               <div class="col-sm-8">
-                <input id="rating" type="number" class="rating" min=0 max=5 step=1 required>
+                <label class="radio-inline"><input type="radio" name="received" value="received"> Received</label>
+                <label class="radio-inline"><input type="radio" name="received" value="given"> Given</label>
               </div>
             </div>
 
@@ -70,19 +71,12 @@
               </div>
             </div>
 
-            <div class="form-group">
-              <label class="col-sm-4 control-label">Action received:</label>
-              <div class="col-sm-8">
-                <label class="radio-inline"><input type="checkbox" name="received"> Received Action</label>
-              </div>
-            </div>
-
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label class="col-sm-4 control-label">Share with your partner:</label>
               <div class="col-sm-8">
                 <label class="radio-inline"><input type="checkbox" name="keep_private"> Keep Private</label>
               </div>
-            </div>
+            </div> -->
 
             <div class="control-group">
               <label for="date-picker-2" class="col-sm-4 control-label">Occurred On:</label>
@@ -96,6 +90,13 @@
             </div>
 
             <p>This is an optional choice. Specify a date if the action occurred in the past.</p>
+
+            <div class="form-group" id="rating-element" style="display:none;">
+              <label class="col-sm-4 control-label">Impact level:</label>
+              <div class="col-sm-8">
+                <input id="rating" type="number" class="rating" min=0 max=5 step=1 required>
+              </div>
+            </div>
 
             <div class="form-group col-sm-12">
               <button type="submit" class="btn btn-primary">Save</button>
@@ -126,6 +127,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
+    <script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -158,8 +160,6 @@
     <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
 
-    <script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js" type="text/javascript"></script>
-
     <script type="text/javascript">
       // Date picker for Entry form.
       $(function() {
@@ -167,6 +167,7 @@
           {
             format: 'MM/DD/YYYY',
             maxDate: $.now(),
+            defaultDate: new Date(),
             ignoreReadonly: true}).on('dp.change', function (e) {
             $('date-picker-2').val(e.date.toString());
           }
