--- a/app/Profile.html
+++ b/app/Profile.html
@@ -116,6 +116,10 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <!-- build:js scripts/profile.js -->
+    <script src="scripts/profile.js"></script>
+    <!-- endbuild -->
+
     <!-- build:js scripts/plugins.js -->
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
@@ -129,9 +133,6 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
-    <!-- endbuild -->
-
-    <script src="scripts/profile.js"></script>
     <!-- endbuild -->
   </body>
 </html>
