Welcome page with more details

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
                 <li><a href="/LoveBank.html">LoveBank</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                <li><a id="profile-name" href="/Profile.html"></a></li>
+                <li><a id="profile-name" href="/Profile.html">Sign-Up</a></li>
               </ul>
             </div>
           </div>
