--- a/app/welcome.html
+++ b/app/welcome.html
@@ -45,7 +45,7 @@
           <li><a href="/LoveBank.html">LoveBank</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a id="profile-name" href="/Profile.html"></a></li>
+          <li><a id="profile-name" href="/Profile.html">Sign-Up</a></li>
         </ul>
       </div>
     </div>
@@ -54,8 +54,22 @@
     <h1>Welcome to Love Bank</h1>
     <p>Something about how we are going to provide insights into meaningful ways that speak love to you.</p>
     <p>Something about how we are going to provide you reports via email</p>
-    
 
+    <h2>How it works</h2>
+    <h4><i class="glyphicon glyphicon-ok"></i> Deposit</h4>
+    <p>Daily enter any deposits that your partner made into your love bank.</p>
+    <p>Deposits is anything that is meaningful to you. Try to provide feedback, was it meaningful 1 - 5 stars.</p>
+
+    <h4><i class="glyphicon glyphicon-hand-right"></i> Mood</h4>
+    <p>Try to rate your mood twice a day, morning and evening.</p>
+    <p>This is not how you feel loved, but your overall mood on life.</p>
+
+    <h4><i class="glyphicon glyphicon-heart"></i> Love Bank level</h4>
+    <p>Try to rate what you believe your current Love Bank level.</p>
+    <p>If possible, do this once a day.</p>
+
+    <h3>Getting Started</h3>
+    <h4><i class="glyphicon glyphicon-user"></i> <a id="profile-name" href="/Profile.html">Create a Profile</a></h4>
 
   </div><!--row marketing -->
 </div><!--container-->
