Love Bank heading
With a piggy bank font

--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -41,7 +41,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Love Treasury</a>
+            <a class="navbar-brand" href="/">Love Bank <i class="glyphicon glyphicon-piggy-bank"></i></a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
