--- a/app/welcome.html
+++ b/app/welcome.html
@@ -36,7 +36,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Love Treasury</a>
+        <a class="navbar-brand" href="/">Love Bank <i class="glyphicon glyphicon-piggy-bank"></i></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
@@ -72,6 +72,11 @@
     <h4><i class="glyphicon glyphicon-user"></i> <a id="profile-name" href="/Profile.html">Create a Profile</a></h4>
 
   </div><!--row marketing -->
+
+  <div class="footer">
+    <p>♥ from the LoveBank team</p>
+  </div>
+
 </div><!--container-->
 
 
