--- a/app/Profile.html
+++ b/app/Profile.html
@@ -68,7 +68,7 @@
             </fieldset>
             <fieldset class="form-group col-sm-12">
             <label for="email">Email</label>
-              <input class="form-control" type="text" name="email">
+              <input class="form-control" type="email" name="email">
             </fieldset>
             <div class="form-group col-sm-12">
               <button type="submit" class="btn btn-primary">Save</button>
@@ -82,7 +82,7 @@
           <form id="linked-profile-form" action="/profiles?filter[email]=" method="get" accept-charset="utf-8">
             <fieldset class="form-group col-sm-12">
             <label for="email">Email</label>
-              <input class="form-control" type="text" name="email">
+              <input class="form-control" type="email" name="email">
             </fieldset>
             <div class="form-group col-sm-12">
               <button type="submit" class="btn btn-primary">Connect</button>
