--- a/app/welcome.html
+++ b/app/welcome.html
@@ -31,27 +31,13 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
         <a class="navbar-brand" href="/">Love Bank <i class="glyphicon glyphicon-piggy-bank"></i></a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="/">Deposit</a></li>
-          <li><a href="/Mood.html">Mood</a></li>
-          <li><a href="/LoveBank.html">LoveBank</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a id="profile-name" href="/Profile.html">Sign-Up</a></li>
-        </ul>
+        <a class="navbar-brand pull-right" id="profile-name" href="/Profile.html">Sign-Up</a>
       </div>
     </div>
   </nav>
   <div class="row marketing">
-    <h1>Welcome to Love Bank</h1>
+    <h1>Love Bank</h1>
     <p>Something about how we are going to provide insights into meaningful ways that speak love to you.</p>
     <p>Something about how we are going to provide you reports via email</p>
 
