--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -15,6 +15,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" type="text/css"/>
+
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -48,8 +50,6 @@
               <li><a href="/">Deposit</a></li>
               <li><a href="/Mood.html">Mood</a></li>
               <li class="active"><a href="/LoveBank.html">LoveBank</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
               <li><a id="profile-name" href="/Profile.html"></a></li>
             </ul>
           </div>
@@ -63,7 +63,7 @@
           <div class="form-group">
             <!-- <label class="col-sm-4 control-label">level:</label> -->
             <div class="col-sm-12">
-              <input id="rating" type="number" class="rating" min=0 max=5 step=1 required>
+              <input id="rating" type="number" class="rating" data-size="xs" min=0 max=5 step=1 required>
               <p>Rate what you believe to be your current Love Bank level.</p>
             </div>
           </div>
@@ -78,12 +78,12 @@
             <button type="submit" class="btn btn-primary">Save</button>
           </div>
         </form>
-        <div id="message" class="alert alert-success col-sm-12" role="alert"></div>
       </div>
       <div class="footer">
         <p>♥ from the LoveBank team</p>
       </div>
     </div>
+
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -94,7 +94,6 @@
 
       ga('create', 'UA-73481201-1', 'auto');
       ga('send', 'pageview');
-
     </script>
 
     <!-- build:js scripts/vendor.js -->
@@ -122,6 +121,27 @@
     <!-- endbuild -->
 
     <script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+
+    <script>
+      toastr.options = {
+        "closeButton": false,
+        "debug": false,
+        "newestOnTop": false,
+        "progressBar": false,
+        "positionClass": "toast-bottom-left",
+        "preventDuplicates": false,
+        "onclick": null,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+      }
+    </script>
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
