More details on the welcome screen.

--- a/app/welcome.html
+++ b/app/welcome.html
@@ -57,6 +57,19 @@
     <h3>Getting Started</h3>
     <h4><i class="glyphicon glyphicon-user"></i> <a id="profile-name" href="/Profile.html">Create a Profile</a></h4>
 
+    <h2>More about Love Bank</h2>
+    <p>Concepts used are from "The Five Love Languages" and "Love and Respect"</p>
+    <p>We believe that we can help couples learn about each other.
+    Many times, we believe that we are doing loving acts for our partner, but in actuality we are not speaking
+    their love language.</p>
+    <p><img class="img-responsive" src="images/1551-crazy_cycle.png"></p>
+
+    <h3>Your data</h3>
+    <ul>
+      <li>Your data may be analyzed as we build the system. Currently, this is a concept and an idea.</li>
+      <li>Your data will NOT be shared with any other party.</li>
+    </ul>
+
   </div><!--row marketing -->
 
   <div class="footer">
