--- a/app/welcome.html
+++ b/app/welcome.html
@@ -32,7 +32,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">Love Bank <i class="glyphicon glyphicon-piggy-bank"></i></a>
-        <a class="navbar-brand pull-right" id="profile-name" href="/Profile.html">Sign-Up</a>
+        <a class="navbar-brand pull-right" id="profile-name" href="./Profile.html">Sign-Up</a>
       </div>
     </div>
   </nav>
@@ -42,20 +42,35 @@
     <p>Something about how we are going to provide you reports via email</p>
 
     <h2>How it works</h2>
-    <h4><i class="glyphicon glyphicon-ok"></i> Deposit</h4>
-    <p>Daily enter any deposits that your partner made into your love bank.</p>
-    <p>Deposits is anything that is meaningful to you. Try to provide feedback, was it meaningful 1 - 5 stars.</p>
+    <h4><i class="glyphicon glyphicon-ok"></i> Credit</h4>
+    <p>Daily enter credits to your partner’s account for actions you received. Credits could include… <b>acts of service</b>, <b>words of affirmation</b>,
+    <b>quality time</b> or <b>touch</b> that were made towards you.</p>
+    <p>A <b>Love Bank credit</b> is anything that is meaningful to you. Try to describe the credit you are given and
+      rate the action.</p>
 
-    <h4><i class="glyphicon glyphicon-hand-right"></i> Mood</h4>
-    <p>Try to rate your mood twice a day, morning and evening.</p>
-    <p>This is not how you feel loved, but your overall mood on life.</p>
+    <h4>Common Languages of Love</h4>
+    <p>According to Gary D. Chapman, actions that express a Heartfelt commitment to your mate can be broken into 5 languages.</p>
+    <ul>
+      <li>Words of Affirmation</li>
+      <li>Acts of Service</li>
+      <li>Receiving Gifts</li>
+      <li>Quality Time</li>
+      <li>Physical Touch</li>
+    </ul>
 
-    <h4><i class="glyphicon glyphicon-heart"></i> Love Bank level</h4>
-    <p>Try to rate what you believe your current Love Bank level.</p>
-    <p>If possible, do this once a day.</p>
+    <p>If this is a new concept to you, we recommend you read his book and / or take the 5 Love Languages test at <a href="http://www.5lovelanguages.com/">The 5 Love Languages</a>.</p>
+
+    <h4><i class="glyphicon glyphicon-education"></i> Daily Report</h4>
+    <p>Each Day, a report will be emailed to you containing the credits your partner entered.</p>
+    <p>This means that you get to read all about how you spoke to your partner's heart that day.</p>
+    <p>Very often, we are spending energy towards our partner, believing that we are helpful or making a sincere
+      difference. Instead, the action can be unwanted or untimely. These actions, while they are kind, loving or well meaning, do not
+    always speak to our partner in the way we intend.</p>
+
+    <p>Our intent is to help guide both you and your partner to better speak each others love languages.</p>
 
     <h3>Getting Started</h3>
-    <h4><i class="glyphicon glyphicon-user"></i> <a id="profile-name" href="/Profile.html">Create a Profile</a></h4>
+    <h4><i class="glyphicon glyphicon-user"></i> <a href="./Profile.html">Create a Profile</a></h4>
 
     <h2>More about Love Bank</h2>
     <p>Concepts used are from "The Five Love Languages" and "Love and Respect"</p>
